# hm

./: README.md
.github/workflows/: build-android.yml  build-ios.yml  test-android.yml  test-ios.yml
doc/: 00_PROJECT_OVERVIEW.md  01_XORON_H.md  02_xoron_http_cpp.md  03_xoron_crypto_cpp.md  04_xoron_env_cpp.md  05_xoron_filesystem_cpp.md  06_xoron_memory_cpp.md  07_xoron_debug_cpp.md  08_xoron_console_cpp.md  09_xoron_drawing_cpp.md  10_xoron_websocket_cpp.md  11_xoron_input_cpp.md  12_xoron_cache_cpp.md  13_xoron_ui_cpp.md  14_xoron_android_cpp.md  15_xoron_ios_mm.md  16_CMakeLists_txt.md  17_saveinstance_lua.md  18_INTEGRATION_MAP.md  COMPLETION_SUMMARY.md  README.md
docs/: INDEX.md  README.md
docs/api/: README.md  core_api.md  lua_api.md
docs/architecture/: README.md  component_model.md  execution_flow.md  memory_model.md  security_model.md
docs/workflows/: README.md
src/: CMakeLists.txt  README.md  xoron.h  xoron_android.cpp  xoron_cache.cpp  xoron_console.cpp  xoron_crypto.cpp  xoron_crypto.mm  xoron_debug.cpp  xoron_drawing.cpp  xoron_drawing.mm  xoron_env.cpp  xoron_env.mm  xoron_filesystem.cpp  xoron_http.mm  xoron_input.cpp  xoron_input.mm  xoron_ios.mm  xoron_luau.cpp  xoron_memory.cpp  xoron_memory.mm  xoron_ui.cpp  xoron_ui.mm  xoron_websocket.mm
src/lua/: README.md  saveinstance.lua
src/tests/: INTEGRATION_TEST_GUIDE.md  README.md
src/tests/android/: AndroidManifest.xml  CMakeLists.txt  README.md  XoronTestRunner.java  build.gradle  test_android_integration.cpp
src/tests/common/: test_utils.h
src/tests/ios/: CMakeLists.txt  Info.plist  README.md  test_ios_integration.mm
src/ui/: xoron_ui.lua
